tests/baselines/reference/crashIntypeCheckInvocationExpression.errors.txt
crashIntypeCheckInvocationExpression.ts(6,28): error TS2304: Cannot find name 'task'.
crashIntypeCheckInvocationExpression.ts(8,18): error TS2304: Cannot find name 'path'.
crashIntypeCheckInvocationExpression.ts(9,19): error TS2347: Untyped function calls may not accept type arguments.
crashIntypeCheckInvocationExpression.ts(10,50): error TS2304: Cannot find name 'moduleType'.


==== crashIntypeCheckInvocationExpression.ts (4 errors) ====
    var nake;
    function doCompile<P0, P1, P2>(fileset: P0, moduleType: P1) {
    
        return undefined;
    }
    export var compileServer = task<number, number, any>(<P0, P1, P2>() => {
                               ~~~~
!!! error TS2304: Cannot find name 'task'.
    
        var folder = path.join(),
                     ~~~~
!!! error TS2304: Cannot find name 'path'.
            fileset = nake.fileSetSync<number, number, any>(folder)
                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2347: Untyped function calls may not accept type arguments.
      return doCompile<number, number, any>(fileset, moduleType);
                                                     ~~~~~~~~~~
!!! error TS2304: Cannot find name 'moduleType'.
    });
    